tests/neg/i20554-b/Test.scala
//> using options -explain

@SimpleAnnotation(1) // error: the parameters is not named 'value'
class Test